# vcpkg-python-test

./: CMakeLists.txt  README.md  test.cpp  vcpkg.json
